tests/invalidTest/other/bool_type_cast_error.q
# EXPECT type cannot be converted to Boolean

def sint64 errorTest(){
    if 1
    then return 1
    else return 2
} 